# SRHG-ai-apacker

./: .gitignore  README.md
00_AE_Quicklinks/: README.md
00_Docs/: README.md
00_Docs/Modules/: 01_Intro_and_Vibe_Check.md
02_Dense_Vector_Retrieval/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md  pyproject.toml
02_Dense_Vector_Retrieval/aimakerspace/: text_utils.py  vectordatabase.py
02_Dense_Vector_Retrieval/aimakerspace/ai_utils/: chatmodel.py  embedding.py
03_The_Agent_Loop/: Makefile  The_Agent_Loop_Assignment.ipynb  pyproject.toml
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  pyproject.toml
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignmen_AP.ipynb  pyproject.toml  supervisor_agent.py
ai-engineering-challenge/: Makefile  pyproject.toml
ai-engineering-challenge/api/: index.py
ai-engineering-challenge/app/: hello_world.ipynb
ai-engineering-challenge/frontend/: package.json
ai-engineering-challenge/frontend/app/: globals.css  layout.tsx
ai-engineering-challenge/frontend/components/: ChatInterface.tsx  MessageContent.tsx
ai-engineering-challenge/frontend/hooks/: useLocalStorage.ts  useTypingEffect.ts
ai-engineering-challenge/frontend/public/: manifest.json
docs/module1/: assignment-answers.md
