[project]
name = "04-agentic-rag-from-scratch"
version = "0.1.0"
description = "Agentic RAG From Scratch - Building Agents with LangGraph and Anthropic Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.3.0",
    "qdrant-client>=1.12.0",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
    "arize-phoenix>=8.0.0",
    "arize-phoenix-otel>=0.8.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "pymupdf>=1.24.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "certifi>=2024.0.0",
]
